@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-29T08:21:41Z",
-  "count_outdated" : 362,
-  "uniques_outdated" : 207,
+  "timestamp" : "2022-06-29T16:40:44Z",
+  "count_outdated" : 363,
+  "uniques_outdated" : 208,
   "count" : 386,
   "uniques" : 223,
   "clones" : [
-    {
-      "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
